welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value estsurBiscuit
  if (estsurBiscuit()) {
      ^RunHalf:7: error: not found: value biscruits
    biscuits=biscruits+1
             ^